--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,7 @@ jobs:
         shell: bash -l {0}
         run: |
           pip install -e . --no-deps
+          pip install dask fsspec python-snappy
 
       - name: Run Tests
         shell: bash -l {0}
@@ -54,6 +55,7 @@ jobs:
         shell: bash -l {0}
         run: |
           pip install -e . --no-deps
+          pip install dask fsspec python-snappy
 
       - name: Run Tests
         shell: bash -l {0}
